force-app/main/default/objects/RefundScale__c/RefundScale__c.object-meta.xml
<CustomObject>
    <label>Refund Scale</label>
    <nameField>
        <displayFormat>RS-{00000}</displayFormat>
        <label>Scale Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refund Scales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>