force-app/main/default/objects/RefundScale__c/fields/ContractPosition__c.field-meta.xml
<CustomField>
    <fullName>ContractPosition__c</fullName>
    <description>The refund position this scale step belongs to. [Sources: XLSX-003, MN-003 Z.185-212]</description>
    <inlineHelpText>The refund position this scale step belongs to.</inlineHelpText>
    <label>Contract Position</label>
    <referenceTo>ContractPosition__c</referenceTo>
    <relationshipLabel>Refund Scales</relationshipLabel>
    <relationshipName>RefundScales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>