force-app/main/default/objects/RefundScale__c/fields/RefundAmountPerKg__c.field-meta.xml
<CustomField>
    <fullName>RefundAmountPerKg__c</fullName>
    <description>Entry aid for the legacy &apos;cents per kilo&apos; form per step — the percentage remains the leading value. [Sources: C-01, K-5 2026-08-11]</description>
    <inlineHelpText>Entry aid for the legacy &apos;cents per kilo&apos; form per step — the percentage remains the leading value.</inlineHelpText>
    <label>Refund Amount (€/kg)</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>