force-app/main/default/objects/RefundScale__c/fields/RefundPct__c.field-meta.xml
<CustomField>
    <fullName>RefundPct__c</fullName>
    <description>The refund rate that applies from this scale threshold. [Sources: XLSX-003, C-01]</description>
    <inlineHelpText>The refund rate that applies from this scale threshold.</inlineHelpText>
    <label>Refund Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>