force-app/main/default/objects/RefundScale__c/fields/ScaleFromAmount__c.field-meta.xml
<CustomField>
    <fullName>ScaleFromAmount__c</fullName>
    <description>From which annual revenue this step applies (for revenue-based refunds). [Sources: XLSX-003]</description>
    <inlineHelpText>From which annual revenue this step applies (for revenue-based refunds).</inlineHelpText>
    <label>Scale From (€)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>