force-app/main/default/objects/RefundScale__c/fields/ScaleFromQty__c.field-meta.xml
<CustomField>
    <fullName>ScaleFromQty__c</fullName>
    <description>From which annual purchase quantity this step applies (for quantity-based refunds). [Sources: XLSX-003]</description>
    <inlineHelpText>From which annual purchase quantity this step applies (for quantity-based refunds).</inlineHelpText>
    <label>Scale From (kg)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>