force-app/main/default/objects/RefundScale__c/listViews/All_Scale_Steps.listView-meta.xml
<ListView>
    <fullName>All_Scale_Steps</fullName>
    <columns>NAME</columns>
    <columns>ContractPosition__c</columns>
    <columns>ScaleFromQty__c</columns>
    <columns>ScaleFromAmount__c</columns>
    <columns>RefundPct__c</columns>
    <columns>RefundAmountPerKg__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Scale Steps</label>
</ListView>